[package]
name = "bevy_phys_profile"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
bevy = "0.13.2"
bevy_rapier3d = { version = "0.25" , default-features = false, features = ["dim3", "simd-stable"] }
bevy_xpbd_3d = { version = "0.4.2", default-features = false, features = ["3d", "f32", "parry-f32", "simd"] }
criterion = "0.5.1"
pprof = { version = "0.13.0", features = ["flamegraph", "criterion"] }

[[bench]]
name = "colliders"
harness = false
